# time_series

./: CMakeLists.txt  readme.md
.github/workflows/: c-cpp.yml  compile_test.yml
library_fin_data/common_usage_library/: arg_types_traits.h  cpp_version.h  floating_point_comp.hpp  itertools.hpp  joins.hpp  randomer.hpp  tupletools.hpp
library_fin_data/common_usage_library/types_requirements/: comparator.h  container.h  ctor_input.h  hash.h  iterators.h  numerics.h  object_args_count.h  operators.h
library_fin_data/financial_data_structures/: bid_ask.h  const_values.h  ohlcv.h  single_qoute.h  single_quote.h
library_fin_data/third_part/cds/: safe_ptr.h
library_fin_data/time_series/: CMakeLists.txt  const_values.h  element.h  element.hpp  floating_point_comp.h  floating_point_comp.hpp  functions.hpp  quote.cpp  quote__.h  serie.h  serie.hpp  serie_join.hpp  serie_random_generator.hpp  timestamp.h  timestamp.hpp  type_requirements.h  utils.h  value.h  value.hpp  value_traits.h  value_type.h
library_fin_data/time_series/types_requirements/: compile_time_test.h  container.h  ctor_input.h  iterators.h  numerics.h  operators.h  serie.h  series_container.h
library_fin_data/utils/: arg_types_traits.h  cpp_version.h  itertools.hpp  joins.hpp  randomer.hpp  utils.h  utils.hpp
library_time_series/: culib.h  finlib.h  tslib.h
library_time_series/common_usage_library/: arg_types_traits.h  const_values.h  floating_point_comp.hpp  itertools.hpp  memresource.hpp  memuse.hpp  memuse_allocation_stats.hpp  memuse_custom_memory_resource.hpp  pmr_container.hpp  randomer.hpp  timestamp.hpp  tupletools.hpp  utils.hpp
library_time_series/common_usage_library/types_requirements/: comparator.h  container.h  ctor_input.h  hash.h  iterators.h  numerics.h  object_args_count.h  operators.h  time.h
library_time_series/financial/container/: CMakeLists.txt  bench_results  boiler_plate.hpp  columns.hpp  container.hpp  maps.h  memuse_allocation_stats.hpp  memuse_custom_memory_resource.hpp
library_time_series/financial/data_structures/: bid_ask.h  bid_ask.hpp  ideas_space.md  ohlcv.h  ohlcv.hpp
library_time_series/time_series/: CMakeLists.txt  element.hpp  element_requirements.h  quote.cpp  serie.hpp  serie_random_generator.hpp  serie_requirements.h  serie_synthetic.hpp  value.hpp
playground/: CMakeLists.txt  TechIndicators.cpp  TechIndicators.h  playground.cpp
tests/: CMakeLists.txt  WTI_OHLCVminute sept2016 short.csv  __tests_assignments.cpp  __tests_precision.cpp  tests_all.cpp  tests_arithmetics.cpp  tests_assignments.cpp  tests_basics_container.cpp  tests_basics_floating_point_comparison.cpp  tests_basics_itertools.cpp  tests_basics_joins.cpp  tests_basics_timestamp.cpp  tests_basics_types_requirements.cpp  tests_comparison.cpp  tests_comparison_basics.cpp  tests_comparison_ts_elems.cpp  tests_ctors.cpp  tests_ctors_and_assignments.cpp  tests_element_arithmetics.cpp  tests_element_comparison.cpp  tests_element_conversion_operators.cpp  tests_element_ctors.cpp  tests_element_fun_apply.cpp  tests_element_structural_bindings.cpp  tests_element_structured_bindings.cpp  tests_end_to_end_columns_single_thread.cpp  tests_end_to_end_sv_file_reader.hpp  tests_financial_container.cpp  tests_serie_container.cpp  tests_serie_fun_apply.cpp  tests_serie_itertools.cpp  tests_serie_joins.cpp  tests_value_arithmetics.cpp  tests_value_comparison.cpp  tests_value_conversion_operators.cpp  tests_value_ctors.cpp  time_serie_random_generator.hpp  typed_tests_list.h
